2005-10-16  Zoltan Varga  <vargaz@freemail.hu>

	* amd64/amd64-codegen.h (AMD64_CALLEE_SAVED_REGS): Add %rbp.

2005-09-27  Raja R Harinath  <rharinath@novell.com>

	* arm/dpiops.sh, arm/fpaops.h: Output to stdout.
	* arm/Makefile.am (arm_dpimacros.h, arm_fpamacros.h): Update.  Fix
	for srcdir != builddir.

2005-09-11  Zoltan Varga  <vargaz@gmail.com>

	* ia64/ia64-codegen.h (ia64_unw_pop_frames): New unwind macro.

2005-09-10  Zoltan Varga  <vargaz@gmail.com>

	* ia64/ia64-codegen.h: Remove 'manual' emitting of instructions. 
	Integrate emission of unwind directives into the assembly macros.

2005-09-04  Zoltan Varga  <vargaz@gmail.com>

	* ia64/ia64-codegen.h (ia64_no_stop): New macro.

2005-08-27  Zoltan Varga  <vargaz@gmail.com>

	* ia64/ia64-codegen.h: Fix some bugs.

	* ia64/codegen.c: Update to work with latest ia64-codegen.h

2005-08-26  Zoltan Varga  <vargaz@gmail.com>

	* ia64/Makefile.am: Distribute ia64-codegen.h.

2005-08-21  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Improve ins scheduling and fix some bugs.

2005-08-17  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Add dependency information for all instructions.

2005-07-30  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Ongoing IA64 work.

Wed Jul 20 18:01:54 BST 2005 Paolo Molaro <lupus@ximian.com>

	* arm/*: more codegen macros.

2005-07-18  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h (ia64_is_adds_imm): Ongoing IA64 work.

2005-06-23  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Add some new pseudo ops.

2005-06-19  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Fix encoding of ia64_fclass.

2005-06-12  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Ongoing IA64 work.

2005-06-09  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/ia64-codegen.h: Ongoing IA64 work.

2005-05-30  Zoltan Varga  <vargaz@freemail.hu>

	* ia64/codegen.c: Fix it after latest changes.
